--- a/src/Styles/Register.module.scss
+++ b/src/Styles/Register.module.scss
@@ -2,6 +2,7 @@
 
 html.homePage {
 	font-size: 100%;
+	font-family: 'Poppins', sans-serif;
 }
 
 .wrapper {
@@ -116,7 +117,6 @@ html.homePage {
 				font-size: 1.75rem;
 				font-weight: 600;
 				margin: 0 0 0.5rem 0;
-				font-family: 'Metropolis', sans-serif;
 			}
 
 			> p {
@@ -569,7 +569,6 @@ html.homePage {
 					font-size: 2rem;
 					font-weight: 600;
 					margin: 0 0 1rem 0;
-					font-family: 'Metropolis', sans-serif;
 				}
 
 				> p {
