--- a/src/Styles/Statistics.module.scss
+++ b/src/Styles/Statistics.module.scss
@@ -538,8 +538,8 @@ html.homePage {
 			color: white;
 			background-color: var(--accent-cl);
 			border: 1px solid transparent;
-			padding: 0.5rem;
-			gap: 1rem;
+			padding: 0.75rem 2rem;
+			gap: 0.5rem;
 			border-radius: 0.5rem;
 			transition: all 0.2s ease-in-out;
 
@@ -548,16 +548,21 @@ html.homePage {
 				background-color: transparent;
 				box-shadow: 0 0 5rem 0.1rem #5a54ffae;
 				border: 1px solid rgba(128, 128, 128, 0.257);
+
+				> svg {
+					transform: translateX(0.5rem);
+				}
 			}
 
 			> svg {
 				font-size: 2rem;
+				transition: all 0.2s ease-in-out;
 			}
 
 			> p {
 				font-size: 1rem;
 				font-family: 'Poppins', sans-serif;
-				margin: 0 0 0 1rem;
+				margin: 0;
 			}
 		}
 	}
